--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "admin-lte": "^3.2.0",
     "jquery": "^3.7.1",
     "react": "^18.2.0",
+    "react-data-table-component": "^7.5.4",
     "react-dom": "^18.2.0",
     "react-router-dom": "^6.21.1",
     "react-scripts": "5.0.1",
