--- a/package.json
+++ b/package.json
@@ -12,16 +12,13 @@
     "react": "^18.2.0",
     "react-data-table-component": "^7.5.4",
     "react-dom": "^18.2.0",
+    "react-files": "^3.0.0",
     "react-router-dom": "^6.21.1",
     "react-scripts": "5.0.1",
-<<<<<<< HEAD
     "react-select": "^5.8.0",
+    "styled-components": "^6.1.6",
     "web-vitals": "^2.1.4",
     "yup": "^1.3.3"
-=======
-    "styled-components": "^6.1.6",
-    "web-vitals": "^2.1.4"
->>>>>>> 8dc9c1af6afcb80325578a80ae2c3ba82d3485dd
   },
   "scripts": {
     "start": "react-scripts start",
