--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "react": "^18.2.0",
     "react-data-table-component": "^7.5.4",
     "react-dom": "^18.2.0",
+    "react-dropdown-select": "^4.11.0",
     "react-files": "^3.0.0",
     "react-router-dom": "^6.21.1",
     "react-scripts": "5.0.1",
