--- a/package.json
+++ b/package.json
@@ -8,9 +8,13 @@
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
     "admin-lte": "^3.2.0",
+    "apexcharts": "^3.45.1",
+    "chart.js": "^4.4.1",
+    "faker": "^6.6.6",
     "formik": "^2.4.5",
     "jquery": "^3.7.1",
     "react": "^18.2.0",
+    "react-chartjs-2": "^5.2.0",
     "react-data-table-component": "^7.5.4",
     "react-dom": "^18.2.0",
     "react-dropdown-select": "^4.11.0",
