--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "@testing-library/user-event": "^13.5.0",
     "admin-lte": "^3.2.0",
     "apexcharts": "^3.45.1",
+    "axios": "^1.6.5",
     "chart.js": "^4.4.1",
     "faker": "^6.6.6",
     "formik": "^2.4.5",
